[gd_scene load_steps=27 format=2]

[ext_resource path="res://Battle/Projectiles/Base.tscn" type="PackedScene" id=1]
[ext_resource path="res://Battle/Projectiles/Assets/nervous shock.png" type="Texture" id=2]
[ext_resource path="res://Battle/Projectiles/NerveShock.gd" type="Script" id=3]
[ext_resource path="res://Battle/Projectiles/Assets/lightning.png" type="Texture" id=4]

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 55, 110 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 4 )
region = Rect2( 55, 0, 55, 110 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 4 )
region = Rect2( 110, 0, 55, 110 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 4 )
region = Rect2( 165, 0, 55, 110 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 4 )
region = Rect2( 220, 0, 55, 110 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 4 )
region = Rect2( 275, 0, 55, 110 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 4 )
region = Rect2( 330, 0, 55, 110 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 4 )
region = Rect2( 385, 0, 55, 110 )

[sub_resource type="SpriteFrames" id=27]
animations = [ {
"frames": [ SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 55, 110 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 2 )
region = Rect2( 55, 0, 55, 110 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 2 )
region = Rect2( 110, 0, 55, 110 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 2 )
region = Rect2( 165, 0, 55, 110 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 2 )
region = Rect2( 220, 0, 55, 110 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 275, 0, 55, 110 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 330, 0, 55, 110 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 385, 0, 55, 110 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 440, 0, 55, 110 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 495, 0, 55, 110 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 2 )
region = Rect2( 550, 0, 55, 110 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ) ],
"loop": true,
"name": "travel",
"speed": 5.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": false,
"name": "burst",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=1]
radius = 18.0
height = 58.0

[node name="NerveShock" instance=ExtResource( 1 )]
scale = Vector2( 0.75, 0.75 )
script = ExtResource( 3 )

[node name="WarningBolt" type="Node2D" parent="." index="0"]
visible = false
modulate = Color( 0, 0, 0, 1 )
scale = Vector2( 0.2, 1 )

[node name="Sprites" type="Node2D" parent="WarningBolt" index="0"]

[node name="LightningSprite" type="AnimatedSprite" parent="WarningBolt/Sprites" index="0"]
position = Vector2( 1.5, -772 )
frames = SubResource( 27 )
frame = 1
__meta__ = {
"_edit_lock_": true
}

[node name="LightningSprite2" type="AnimatedSprite" parent="WarningBolt/Sprites" index="1"]
position = Vector2( 1.5, -662 )
frames = SubResource( 27 )
frame = 1
flip_v = true
__meta__ = {
"_edit_lock_": true
}

[node name="LightningSprite3" type="AnimatedSprite" parent="WarningBolt/Sprites" index="2"]
position = Vector2( 1.5, -552 )
frames = SubResource( 27 )
frame = 1
__meta__ = {
"_edit_lock_": true
}

[node name="LightningSprite4" type="AnimatedSprite" parent="WarningBolt/Sprites" index="3"]
position = Vector2( 1.5, -442 )
frames = SubResource( 27 )
frame = 1
flip_v = true
__meta__ = {
"_edit_lock_": true
}

[node name="LightningSprite5" type="AnimatedSprite" parent="WarningBolt/Sprites" index="4"]
position = Vector2( 1.5, -332 )
frames = SubResource( 27 )
frame = 1
__meta__ = {
"_edit_lock_": true
}

[node name="LightningSprite6" type="AnimatedSprite" parent="WarningBolt/Sprites" index="5"]
position = Vector2( 1.5, -222 )
frames = SubResource( 27 )
frame = 1
flip_v = true
__meta__ = {
"_edit_lock_": true
}

[node name="LightningSprite7" type="AnimatedSprite" parent="WarningBolt/Sprites" index="6"]
position = Vector2( 1.5, -112 )
frames = SubResource( 27 )
frame = 1
__meta__ = {
"_edit_lock_": true
}

[node name="LightningSprite8" type="AnimatedSprite" parent="WarningBolt/Sprites" index="7"]
position = Vector2( 1.5, -2 )
frames = SubResource( 27 )
frame = 1
flip_v = true
__meta__ = {
"_edit_lock_": true
}

[node name="LightningSprite9" type="AnimatedSprite" parent="WarningBolt/Sprites" index="8"]
position = Vector2( 1.5, 108 )
frames = SubResource( 27 )
frame = 1
__meta__ = {
"_edit_lock_": true
}

[node name="LightningSprite10" type="AnimatedSprite" parent="WarningBolt/Sprites" index="9"]
position = Vector2( 1.5, 218 )
frames = SubResource( 27 )
frame = 1
flip_v = true
__meta__ = {
"_edit_lock_": true
}

[node name="LightningSprite11" type="AnimatedSprite" parent="WarningBolt/Sprites" index="10"]
position = Vector2( 1.5, 328 )
frames = SubResource( 27 )
frame = 1
__meta__ = {
"_edit_lock_": true
}

[node name="LightningSprite12" type="AnimatedSprite" parent="WarningBolt/Sprites" index="11"]
position = Vector2( 1.5, 438 )
frames = SubResource( 27 )
frame = 1
flip_v = true
__meta__ = {
"_edit_lock_": true
}

[node name="LightningSprite13" type="AnimatedSprite" parent="WarningBolt/Sprites" index="12"]
position = Vector2( 1.5, 548 )
frames = SubResource( 27 )
frame = 1
__meta__ = {
"_edit_lock_": true
}

[node name="LightningSprite14" type="AnimatedSprite" parent="WarningBolt/Sprites" index="13"]
position = Vector2( 1.5, 658 )
frames = SubResource( 27 )
frame = 1
flip_v = true
__meta__ = {
"_edit_lock_": true
}

[node name="LightningSprite15" type="AnimatedSprite" parent="WarningBolt/Sprites" index="14"]
position = Vector2( 1.5, 768 )
frames = SubResource( 27 )
frame = 1
__meta__ = {
"_edit_lock_": true
}

[node name="LightningSprite16" type="AnimatedSprite" parent="WarningBolt/Sprites" index="15"]
position = Vector2( 1.5, 878 )
frames = SubResource( 27 )
frame = 1
flip_v = true
__meta__ = {
"_edit_lock_": true
}

[node name="BodySprite" type="AnimatedSprite" parent="." index="1"]
frames = SubResource( 13 )
animation = "burst"

[node name="FloatableSprite" parent="." index="3"]
texture = null
hframes = 11

[node name="Area2D" parent="FloatableSprite" index="0"]
collision_layer = 2

[node name="CollisionShape2D" parent="FloatableSprite/Area2D" index="0"]
position = Vector2( 0, -4 )
shape = SubResource( 1 )

[node name="BurstTimer" type="Timer" parent="." index="5"]
wait_time = 1.5
one_shot = true
autostart = true

[connection signal="animation_finished" from="WarningBolt/Sprites/LightningSprite" to="WarningBolt" method="_on_LightningSprite_animation_finished"]
[connection signal="animation_finished" from="BodySprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="FloatableSprite/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="BurstTimer" to="." method="_on_BurstTimer_timeout"]
